fixed wrap on code blocks

--- a/app/highlight.css
+++ b/app/highlight.css
@@ -1,4 +1,4 @@
-span {
+.hljs {
   white-space: pre-wrap;
 }
 
